--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/Artemnsk/slackgametest#readme",
   "dependencies": {
     "@slack/client": "^3.14.1",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "route-parser": "0.0.5",
+    "slack-node": "^0.1.8"
   }
 }
