--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "dependencies": {
     "@slack/client": "^3.14.1",
     "express": "^4.16.2",
+    "greenlock-express": "^2.0.12",
+    "pug": "^2.0.0-rc.4",
+    "redirect-https": "^1.1.4",
     "request": "^2.83.0",
     "route-parser": "0.0.5",
     "slack-node": "^0.1.8"
