--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@slack/client": "^3.14.1",
     "express": "^4.16.2",
+    "firebase-admin": "^5.5.1",
     "greenlock-express": "^2.0.12",
     "pug": "^2.0.0-rc.4",
     "redirect-https": "^1.1.4",
