issue-3 - create teams and channels storages. Create team on app installation. All add/get DB functionality for channels and teams being added.

--- a/firebase/db/database.rules.yaml
+++ b/firebase/db/database.rules.yaml
@@ -1,7 +1,7 @@
 functions:
   # User is webserver.
   - webserverUser(): auth.uid === 'game-webserver'
-  - workspaceExists(workspaceKey): root.workspaces[workspaceKey].exists()
+  - teamExists(teamKey): root.teams[teamKey].exists()
   - channelExists(channelKey): root.channels[channelKey].exists()
 
 schema:
@@ -17,36 +17,46 @@ schema:
           type: boolean
         version:
           type: boolean
-    # Store information about workspaces this app installed on.
-    workspaces:
+    # Store information about teams this app installed on.
+    teams:
       type: object
-      $workspaceKey:
+      indexOn: ['active']
+      $teamKey:
         type: object
         additionalProperties: false
+        constraint: next.active === false || (next.token.exists() && next.userId.exists() && next.botId.exists() && next.botToken.exists())
         required: ['name', 'active']
         properties:
           active:
             type: boolean
           name:
             type: string
-          tokens:
-            type: object
-            $tokenId:
-              type: boolean
-    # Stores information about workspace channels this app used in.
+          token:
+            type: string
+          # User who installed this app.
+          userId:
+            type: string
+          botId:
+            type: string
+          botToken:
+            type: string
+    # Stores information about team channels this app used in.
     channels:
       type: object
-      indexOn: ['workspaceKey']
-      $channelKey:
+      indexOn: ['teamKey']
+      constraint: teamExists(next)
+      $teamKey:
         type: object
-        additionalProperties: false
-        required: ['workspaceKey']
-        properties:
-          workspaceKey:
-            type: string
-            constraint: workspaceExists(next)
-          name:
-            type: string
+        indexOn: ['active']
+        $channelKey:
+          type: object
+          additionalProperties: false
+          required: ['active', 'name']
+          properties:
+            active:
+              type: boolean
+            name:
+              type: string
     # Stores information about game states in channels.
     states:
       type: object
@@ -77,18 +87,18 @@ schema:
               type: number
 
 access:
+  - location: /teams
+    read: webserverUser()
+  - location: /teams/$teamKey
+    write: webserverUser()
+
+  - location: /channels/$teamKey
+    read: webserverUser()
+  - location: /channels/$teamKey/$channelKey
+    write: webserverUser()
+
   - location: /state
     read: webserverUser()
-    write: webserverUser()
-
-  - location: /workspaces
-    read: webserverUser()
-  - location: /workspaces/$workspaceKey
-    write: webserverUser()
-
-  - location: /channels
-    read: webserverUser()
-  - location: /channels/$channelKey
     write: webserverUser()
 
   - location: /states
