issue-3 - channel timeStep setting being added.

--- a/firebase/db/database.rules.yaml
+++ b/firebase/db/database.rules.yaml
@@ -2,7 +2,7 @@ functions:
   # User is webserver.
   - webserverUser(): auth.uid === 'game-webserver'
   - teamExists(teamKey): root.teams[teamKey].exists()
-  - channelExists(channelKey): root.channels[channelKey].exists()
+  - channelExists(teamKey, channelKey): root.channels[teamKey][channelKey].exists()
 
 schema:
   type: object
@@ -43,20 +43,44 @@ schema:
     # Stores information about team channels this app used in.
     channels:
       type: object
-      indexOn: ['teamKey']
-      constraint: teamExists(next)
+      constraint: teamExists($teamKey)
       $teamKey:
         type: object
         indexOn: ['active']
         $channelKey:
           type: object
           additionalProperties: false
-          required: ['active', 'name']
+          constraint: next.timeStep > 0
+          required: ['active', 'name', 'timeStep']
           properties:
             active:
               type: boolean
             name:
               type: string
+            timeStep:
+              type: number
+    # Stores information about players: channel users who created character in game channel.
+    players:
+      type: object
+      constraint: teamExists($teamKey)
+      $teamKey:
+        type: object
+        constraint: channelExists($teamKey, $channelKey)
+        $channelKey:
+          type: object
+          $playerKey:
+            type: object
+            additionalProperties: false
+            # TODO:
+            # constraint: true
+            required: ['active', 'name']
+            properties:
+              active:
+                type: boolean
+              name:
+                type: string
+
+    # TODO:
     # Stores information about game states in channels.
     states:
       type: object
@@ -70,21 +94,24 @@ schema:
     # Actions.
     actions:
       type: object
-      $channelKey:
+      constraint: teamExists($teamKey)
+      $teamKey:
         type: object
-        constraint: channelExists($channelKey)
-        indexOn: ['startAt']
-        $actionKey:
+        $channelKey:
           type: object
-          additionalProperties: false
-          required: ['type', 'startAt', 'number']
-          properties:
-            type:
-              type: string
-            startAt:
-              type: number
-            number:
-              type: number
+          constraint: channelExists($channelKey)
+          indexOn: ['startAt']
+          $actionKey:
+            type: object
+            additionalProperties: false
+            required: ['type', 'startAt', 'number']
+            properties:
+              type:
+                type: string
+              startAt:
+                type: number
+              number:
+                type: number
 
 access:
   - location: /teams
@@ -95,6 +122,11 @@ access:
   - location: /channels/$teamKey
     read: webserverUser()
   - location: /channels/$teamKey/$channelKey
+    write: webserverUser()
+
+  - location: /players/$teamKey/$channelKey/
+    read: webserverUser()
+  - location: /players/$teamKey/$channelKey/$playerKey
     write: webserverUser()
 
   - location: /state
