issue-3 - support command and actions with team, channel and player data.

--- a/firebase/db/database.rules.yaml
+++ b/firebase/db/database.rules.yaml
@@ -68,6 +68,7 @@ schema:
         constraint: channelExists($teamKey, $channelKey)
         $channelKey:
           type: object
+          indexOn: ['active']
           $playerKey:
             type: object
             additionalProperties: false
