issue-10 - add admin field to team. Add it on view and edit screens of prompt app.

--- a/firebase/db/database.rules.yaml
+++ b/firebase/db/database.rules.yaml
@@ -36,6 +36,9 @@ schema:
           # User who installed this app.
           userId:
             type: string
+          # Admin of the app. Separately set via prompt.
+          admin:
+            type: string
           botId:
             type: string
           botToken:
