--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase-admin": "^5.5.1",
     "greenlock-express": "^2.0.12",
     "inquirer": "^4.0.1",
+    "moment": "^2.20.1",
     "redirect-https": "^1.1.4",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
