--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "redux-logger": "^3.0.6",
     "request": "^2.83.0",
     "route-parser": "0.0.5",
-    "slack-node": "^0.1.8"
+    "slack-node": "^0.1.8",
+    "typescript": "^2.6.2"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.16.8",
+    "@types/request": "^2.0.9"
   }
 }
