--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/request": "^2.0.9",
     "@types/route-parser": "^0.1.1",
     "@types/slack-node": "^0.1.2",
-    "tslint": "^5.8.0"
+    "tslint": "^5.8.0",
+    "tslint-eslint-rules": "^4.1.1"
   }
 }
