--- a/firebase/db/database.rules.yaml
+++ b/firebase/db/database.rules.yaml
@@ -166,7 +166,7 @@ schema:
                 ~$gamerKey:
                   type: object
                   constraint: isValidGamer($teamKey, $channelKey, $gamerKey)
-                  required: ['name', 'health', 'mana', 'dead', 'stats']
+                  required: ['name', 'health', 'lastGameAction', 'mana', 'dead', 'stats']
                   additionalProperties: false
                   properties:
                     name:
@@ -174,6 +174,9 @@ schema:
                     dead:
                       type: boolean
                     health:
+                      type: number
+                      constraint: next >= 0
+                    lastGameAction:
                       type: number
                       constraint: next >= 0
                     mana:
